<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010-2012 Felix Bechstein -->
<!--
		This file is part of ub0rlib. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <TextView
            android:id="@+id/predonate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/predonate" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/donate_market"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donate_market_" />

            <Button
                android:id="@+id/donate_paypal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donate_paypal_" />

            <Button
                android:id="@+id/donate_bitcoin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/donate_bitcoin_" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/did_paypal_donation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_paypal_donation" />

        <LinearLayout
            android:id="@+id/layout_nonmarket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="10dip"
                android:text="@string/postdonate" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="5dip"
                android:text="@string/donator_id_" />

            <EditText
                android:id="@+id/paypalid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/donator_id_hint"
                android:singleLine="true" />

            <Button
                android:id="@+id/send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_hash_" />

            <CheckBox
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingTop="5dip"
                android:text="@string/terms" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>